<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!--  Title bar -->
    <TextView  
        android:layout_width="match_parent" 
        android:layout_height="30dp" 
        android:text="@string/add_card"
        android:gravity="center"
    />
    
    <!--  Form for adding -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
        
        <!--  Song name label -->
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/add_front_name_label"
            android:paddingBottom="2dp"/>
        
        <!-- Song name field -->
        <EditText
            android:id="@+id/front_name"
            android:layout_width="match_parent"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/add_front_name_hint"
            android:layout_height="wrap_content"
        />
       <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/add_back_name_label"
            android:paddingBottom="2dp"/>
        
        <!-- Song name field -->
        <EditText
            android:id="@+id/back_name"
            android:layout_width="match_parent"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/add_back_name_hint"
            android:layout_height="wrap_content"
        /> 
        <!--  Buttons for save and cancel -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="10dp">
    
            <Button 
                style="?android:textAppearance"
                android:id="@+id/deck_save"
                android:text="@string/add_deck_save_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_marginRight="15dp"/>
            
            <Button
                style="?android:textAppearance"
                android:id="@+id/deck_cancel"
                android:text="@string/add_deck_cancel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"/>
                
        </LinearLayout>
        
    </LinearLayout>   
    
</LinearLayout>